# Webscraper-LLM

./: readme.md
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: progress.tsx
server/: .env.temp  pyproject.toml  requirements.txt
server/app/: main.py  webscrape.py
server/app/webscripts/: analyze_layout_patterns.js  create_annotated_screenshot.js  detect_visual_elements.js  extract_assets.js  extract_color_palette.js  extract_computed_styles.js  extract_css_info.js  extract_design_tokens.js  extract_layout_info.js  extract_metadata.js  extract_typography.js  extract_visual_hierarchy.js  generate_critical_css.js  generate_critical_html.js  identify_components.js
