[project]
name = "backend"
version = "0.1.0"
description = "webscrape-llm-backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browserbase>=1.4.0",
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.1.0",
    "fastapi[standard]>=0.115.12",
    "openai>=1.88.0",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.3",
    "dotenv>=0.9.9",
]
